test01/argocd init ingress 도메인 변경
도메인을  test01 클러스터에 맞게 변경

--- a/baremetal/clusters/test01/argocd-init/values-2.10.3.yaml
+++ b/baremetal/clusters/test01/argocd-init/values-2.10.3.yaml
@@ -2027,7 +2027,7 @@ server:
 
     # -- Argo CD server hostname
     # @default -- `""` (defaults to global.domain)
-    hostname: "argocd-init.com"
+    hostname: "argocd-init.test01.com"
 
     # -- The path to Argo CD server
     path: /
