test01/doamin 명 변경

--- a/baremetal/clusters/test01/argocd-init/values-2.10.3.yaml
+++ b/baremetal/clusters/test01/argocd-init/values-2.10.3.yaml
@@ -39,7 +39,7 @@ crds:
 global:
   # -- Default domain used by all components
   ## Used for ingresses, certificates, SSO, notifications, etc.
-  domain: argocd-init.com
+  domain: argocd-init.test01.com
 
   # -- Common labels for the all resources
   additionalLabels: {}
