test01/argocd-init 설정 변경
project 설정

--- a/baremetal/clusters/test01/argocd-init/values-2.10.3.yaml
+++ b/baremetal/clusters/test01/argocd-init/values-2.10.3.yaml
@@ -413,7 +413,7 @@ configs:
   ## - https://argo-cd.readthedocs.io/en/stable/user-guide/projects/#project-scoped-repositories-and-clusters
   clusterCredentials: #[]
     - name: test01
-      server: https://mycluster.example.com
+      server: https://192.168.116.131:6443 #https://mycluster.example.com
       labels: {}
       annotations: {}
       config:
