test01/argo apps 수정

--- a/baremetal/clusters/test01/argocd-apps/values-1.6.2.yaml
+++ b/baremetal/clusters/test01/argocd-apps/values-1.6.2.yaml
@@ -58,7 +58,7 @@ projects: #[]
       server: https://192.168.116.131:6443
     clusterResourceWhitelist: #[]
       - group: '*'
-      - kind: '*'
+        kind: '*'
 
 # -- Deploy Argo CD ApplicationSets within this helm release
 # @default -- `[]` (See [values.yaml])
