--- a/baremetal/clusters/test01/argocd-init/values-2.10.3.yaml
+++ b/baremetal/clusters/test01/argocd-init/values-2.10.3.yaml
@@ -366,13 +366,20 @@ configs:
   # Ref: https://argo-cd.readthedocs.io/en/stable/operator-manual/config-management-plugins/
   cmp:
     # -- Create the argocd-cmp-cm configmap
-    create: false
+    create: true
 
     # -- Annotations to be added to argocd-cmp-cm configmap
     annotations: {}
 
     # -- Plugin yaml files to be added to argocd-cmp-cm
-    plugins: {}
+    plugins: #{}
+      kustomize-build-with-helm:
+        init:
+          command: ["/bin/sh", "-c"]
+          args: ["helm dependency build"]
+        generate:
+          command: [sh, -c]
+          args: ["helm template --release-name release-name . > all.yaml && kustomize build"] 
       # --- First plugin
       # my-plugin:
       #   init:
