argocd configmap 수정
kustomize 사용하기 위한 configmap 수정

--- a/baremetal/clusters/test01/argocd-apps/values-1.6.2.yaml
+++ b/baremetal/clusters/test01/argocd-apps/values-1.6.2.yaml
@@ -15,8 +15,8 @@ applications: #[]
       path: baremetal/clusters/test01/argocd-apps
       directory:
         recurse: true
-      plugin:
-        name: kustomize-build-with-helm
+      #plugin:
+      #  name: kustomize-build-with-helm
     # ArgoCD v2.6 or later
 #    sources:
 #     - chart: argocd-apps
