test01/custom plugin 적용

--- a/baremetal/clusters/test01/argocd-init/values-2.10.3.yaml
+++ b/baremetal/clusters/test01/argocd-init/values-2.10.3.yaml
@@ -381,7 +381,7 @@ configs:
           args: ["helm dependency build"]
         generate:
           command: [sh, -c]
-          args: ["helm template . > all.yaml && kustomize build"] 
+          args: ["kustomize build --enable-helm"] 
       # --- First plugin
       # my-plugin:
       #   init:
