--- a/baremetal/clusters/test01/argocd-init/values-2.10.3.yaml
+++ b/baremetal/clusters/test01/argocd-init/values-2.10.3.yaml
@@ -378,9 +378,10 @@ configs:
       kustomize-build-with-helm:
         init:
           command: ["/bin/sh", "-c"]
-          args: ["helm dependency build"]
+          args: ["echo start"]
         generate:
-          command: [sh, -c]
+          #command: [sh, -c]
+          command: [ "sh", "-c" ]
           args: ["kustomize build --enable-helm"] 
       # --- First plugin
       # my-plugin:
