--- a/baremetal/clusters/test01/argocd-apps/values-1.6.2.yaml
+++ b/baremetal/clusters/test01/argocd-apps/values-1.6.2.yaml
@@ -11,21 +11,20 @@ applications: #[]
     project: test01
     source:
       #repoURL: https://github.com/YunchaeJung/k8scluster.git
-      repoURL: https://github.com/YunchaeJung/k8scluster
-      targetRevision: master
-      path: baremetal/clusters/test01/argocd-apps
-      directory:
-        recurse: true
-      plugin:
-        name: kustomize-build-with-helm
+     # repoURL: https://github.com/YunchaeJung/k8scluster
+     # targetRevision: master
+     # path: baremetal/clusters/test01/argocd-apps
+     # directory:
+     #   recurse: true
+     # plugin:
+     #   name: kustomize-build-with-helm
     # ArgoCD v2.6 or later
-#    sources:
-#     - chart: argocd-apps
-#       repoURL: https://github.com/YunchaeJung/k8scluster.git
-#       targetRevision: 8.5.1
-#     - repoURL: https://github.com/YunchaeJung/k8scluster.git
-#       path: baremetal/clusters/test01/argocd-apps-1.6.2
-#       targetRevision: master
+    sources:
+     - repoURL: https://github.com/YunchaeJung/k8scluster.git
+       path: baremetal/clusters/test01/argocd-apps-1.6.2
+       targetRevision: master
+       #plugin:
+       #  name: kustomize-build-with-helm
     destination:
       server: https://192.168.116.131:6443
       namespace: argocd-init
