test01/argocd application 위치 변경
argocd application 은 argocd-init namespace 에 들어가 있어야 하는데 sre-mtr 에 들어가 있어서 문제 였음

--- a/baremetal/clusters/test01/argocd-apps/values-1.6.2.yaml
+++ b/baremetal/clusters/test01/argocd-apps/values-1.6.2.yaml
@@ -42,7 +42,7 @@ applications: #[]
       - /spec/replicas
 
   - name: argocd-apps-kube-prometheus-stack-test01
-    namespace: sre-mtr
+    namespace: argocd-init
     additionalLabels: {}
     additionalAnnotations: {}
     finalizers:
