test01/argocd finalize 수정

--- a/baremetal/clusters/test01/argocd-apps/values-1.6.2.yaml
+++ b/baremetal/clusters/test01/argocd-apps/values-1.6.2.yaml
@@ -45,8 +45,8 @@ applications: #[]
     namespace: argocd-init
     additionalLabels: {}
     additionalAnnotations: {}
-    finalizers:
-    - resources-finalizer.argocd.argoproj.io
+    finalizers: []
+    #- resources-finalizer.argocd.argoproj.io
     project: test01
     source:
       #repoURL: https://github.com/YunchaeJung/k8scluster.git
@@ -89,8 +89,8 @@ projects: #[]
     additionalLabels: {}
     additionalAnnotations: {}
     permitOnlyProjectScopedClusters: false
-    finalizers:
-    - resources-finalizer.argocd.argoproj.io
+    finalizers: []
+    #- resources-finalizer.argocd.argoproj.io
     description: test01 cluster
     sourceRepos:
     - 'https://github.com/YunchaeJung/k8scluster.git'
