--- a/base/kube-prometheus-stack/charts/kube-prometheus-stack-0.72.0/Chart.yaml
+++ b/base/kube-prometheus-stack/charts/kube-prometheus-stack-0.72.0/Chart.yaml
@@ -46,17 +46,19 @@ dependencies:
     condition: crds.enabled
   - name: kube-state-metrics
     version: "5.18.*"
-    repository: https://prometheus-community.github.io/helm-charts
+    repository: ../kube-state-metrics
+    #https://prometheus-community.github.io/helm-charts
     condition: kubeStateMetrics.enabled
   - name: prometheus-node-exporter
     version: "4.32.*"
-    repository: https://prometheus-community.github.io/helm-charts
+    repository: ../prometheus-node-exporter
+    #https://prometheus-community.github.io/helm-charts
     condition: nodeExporter.enabled
-  - name: grafana
-    version: "7.3.*"
-    repository: https://grafana.github.io/helm-charts
-    condition: grafana.enabled
-  - name: prometheus-windows-exporter
-    repository: https://prometheus-community.github.io/helm-charts
-    version: "0.3.*"
-    condition: windowsMonitoring.enabled
+#  - name: grafana
+#    version: "7.3.*"
+##   repository: c
+#    condition: grafana.enabled
+#  - name: prometheus-windows-exporter
+#    repository: https://prometheus-community.github.io/helm-charts
+#    version: "0.3.*"
+#    condition: windowsMonitoring.enabled
