--- a/baremetal/clusters/test01/kube-prometheus-stack/values-0.72.0.yaml
+++ b/baremetal/clusters/test01/kube-prometheus-stack/values-0.72.0.yaml
@@ -4,7 +4,7 @@
 
 ## Provide a name in place of kube-prometheus-stack for `app:` labels
 ##
-nameOverride: ""
+nameOverride: "monitoring"
 
 ## Override the deployment namespace
 ##
@@ -20,7 +20,7 @@ kubeVersionOverride: ""
 
 ## Provide a name to substitute for the full names of resources
 ##
-fullnameOverride: ""
+fullnameOverride: "monitoring"
 
 ## Labels to apply to all resources
 ##
