--- a/baremetal/clusters/test01/argocd-apps/values-1.6.2.yaml
+++ b/baremetal/clusters/test01/argocd-apps/values-1.6.2.yaml
@@ -73,6 +73,7 @@ applications: #[]
         selfHeal: false
       syncOptions:
       - CreateNamespace=true
+      - ServerSideApply=true
     revisionHistoryLimit: null
     ignoreDifferences:
     - group: apps
