argocd apply option 수정
Replace=true 로 수정 (Too long: must have at most 262144 bytes)

--- a/baremetal/clusters/test01/argocd-apps/values-1.6.2.yaml
+++ b/baremetal/clusters/test01/argocd-apps/values-1.6.2.yaml
@@ -73,7 +73,8 @@ applications: #[]
         selfHeal: false
       syncOptions:
       - CreateNamespace=true
-      - ServerSideApply=true
+      - Replace=true
+      #- ServerSideApply=true
     revisionHistoryLimit: null
     ignoreDifferences:
     - group: apps
