argocd 에서 sync 할 수 있게 옵션 수정

--- a/baremetal/clusters/test01/argocd-apps/values-1.6.2.yaml
+++ b/baremetal/clusters/test01/argocd-apps/values-1.6.2.yaml
@@ -73,8 +73,8 @@ applications: #[]
         selfHeal: false
       syncOptions:
       - CreateNamespace=true
-      - Replace=true
-      #- ServerSideApply=true
+      - ServerSideApply=true
+      #- Replace=true
     revisionHistoryLimit: null
     ignoreDifferences:
     - group: apps
