--- a/base/kube-prometheus-stack/charts/kube-prometheus-stack-0.72.0/Chart.yaml
+++ b/base/kube-prometheus-stack/charts/kube-prometheus-stack-0.72.0/Chart.yaml
@@ -46,12 +46,12 @@ dependencies:
     condition: crds.enabled
   - name: kube-state-metrics
     version: "5.18.0"
-    repository: "file://../../../kube-state-metrics/charts/kube-state-metrics-5.18.0"
+    repository: "file://./charts/kube-state-metrics-5.18.0"
     #https://prometheus-community.github.io/helm-charts
     condition: kubeStateMetrics.enabled
   - name: prometheus-node-exporter
     version: "4.32.0"
-    repository: "file://../../../prometheus-node-exporter/charts/prometheus-node-exporter-4.32.0"
+    repository: "file://./prometheus-node-exporter-4.32.0"
     #https://prometheus-community.github.io/helm-charts
     condition: nodeExporter.enabled
 #  - name: grafana
