--- a/base/kube-prometheus-stack/charts/kube-prometheus-stack-0.72.0/Chart.yaml
+++ b/base/kube-prometheus-stack/charts/kube-prometheus-stack-0.72.0/Chart.yaml
@@ -44,17 +44,17 @@ dependencies:
   - name: crds
     version: "0.0.0"
     condition: crds.enabled
-  - name: kube-state-metrics
-    version: "5.18.0"
-    #repository: "file://charts/kube-state-metrics-5.18.0"
-    repository: "file://./charts"
-    #https://prometheus-community.github.io/helm-charts
-    condition: kubeStateMetrics.enabled
-  - name: prometheus-node-exporter
-    version: "4.32.0"
-    repository: "file://./charts"
-    #https://prometheus-community.github.io/helm-charts
-    condition: nodeExporter.enabled
+ - name: kube-state-metrics
+   version: "5.18.0"
+   #repository: "file://charts/kube-state-metrics-5.18.0"
+   repository: https://prometheus-community.github.io/helm-charts #"file://./charts"
+   #https://prometheus-community.github.io/helm-charts
+   condition: kubeStateMetrics.enabled
+ - name: prometheus-node-exporter
+   version: "4.32.0"
+   repository: "https://prometheus-community.github.io/helm-charts" #"file://./charts"
+   #https://prometheus-community.github.io/helm-charts
+   condition: nodeExporter.enabled
 #  - name: grafana
 #    version: "7.3.*"
 ##   repository: c
