--- a/baremetal/clusters/test01/kube-prometheus-stack/values-65.2.0.yaml
+++ b/baremetal/clusters/test01/kube-prometheus-stack/values-65.2.0.yaml
@@ -2037,7 +2037,8 @@ kubeProxy:
 ## Component scraping kube state metrics
 ##
 kubeStateMetrics:
-  enabled: true
+#modify true -> false
+  enabled: false
 
 ## Configuration for kube-state-metrics subchart
 ##
@@ -2111,7 +2112,8 @@ kube-state-metrics:
 ## Deploy node exporter as a daemonset to all nodes
 ##
 nodeExporter:
-  enabled: true
+#modify true -> false
+  enabled: false
   operatingSystems:
     linux:
       enabled: true
