--- a/base/kube-prometheus-stack/charts/kube-prometheus-stack-65.2.0/Chart.yaml
+++ b/base/kube-prometheus-stack/charts/kube-prometheus-stack-65.2.0/Chart.yaml
@@ -44,19 +44,19 @@ dependencies:
   - name: crds
     version: "0.0.0"
     condition: crds.enabled
-  - name: kube-state-metrics
-    version: "5.26.*"
-    repository: https://prometheus-community.github.io/helm-charts
-    condition: kubeStateMetrics.enabled
-  - name: prometheus-node-exporter
-    version: "4.39.*"
-    repository: https://prometheus-community.github.io/helm-charts
-    condition: nodeExporter.enabled
-  - name: grafana
-    version: "8.5.*"
-    repository: https://grafana.github.io/helm-charts
-    condition: grafana.enabled
-  - name: prometheus-windows-exporter
-    repository: https://prometheus-community.github.io/helm-charts
-    version: "0.7.*"
-    condition: windowsMonitoring.enabled
+#  - name: kube-state-metrics
+#    version: "5.26.*"
+#    repository: https://prometheus-community.github.io/helm-charts
+#    condition: kubeStateMetrics.enabled
+#  - name: prometheus-node-exporter
+#    version: "4.39.*"
+#    repository: https://prometheus-community.github.io/helm-charts
+#    condition: nodeExporter.enabled
+#  - name: grafana
+#    version: "8.5.*"
+#    repository: https://grafana.github.io/helm-charts
+#    condition: grafana.enabled
+#  - name: prometheus-windows-exporter
+#    repository: https://prometheus-community.github.io/helm-charts
+#    version: "0.7.*"
+#    condition: windowsMonitoring.enabled
