--- a/baremetal/clusters/test01/argocd-apps/values-1.6.2.yaml
+++ b/baremetal/clusters/test01/argocd-apps/values-1.6.2.yaml
@@ -71,10 +71,10 @@ applications: #[]
       automated:
         prune: false
         selfHeal: false
-      hooks:
-        - type: PostSync
-          command: ["helm"]
-          args: ["dependency", "update"]
+#      hooks:
+#        - type: PostSync
+#          command: ["helm"]
+#          args: ["dependency", "update"]
       syncOptions:
       - CreateNamespace=true
       - ServerSideApply=true
@@ -86,6 +86,98 @@ applications: #[]
       jsonPointers:
       - /spec/replicas
 
+
+  - name: argocd-apps-prometheus-node-exporter-test01
+    namespace: argocd-init
+    additionalLabels: {}
+    additionalAnnotations: {}
+    finalizers: []
+    #- resources-finalizer.argocd.argoproj.io
+    project: test01
+    source:
+      #repoURL: https://github.com/YunchaeJung/k8scluster.git
+     # repoURL: https://github.com/YunchaeJung/k8scluster
+     # targetRevision: master
+     # path: baremetal/clusters/test01/argocd-apps
+     # directory:
+     #   recurse: true
+     # plugin:
+     #   name: kustomize-build-with-helm
+    # ArgoCD v2.6 or later
+    sources:
+     - repoURL: https://github.com/YunchaeJung/k8scluster.git
+       path: baremetal/clusters/test01/prometheus-node-exporter
+       targetRevision: master
+       #plugin:
+       #  name: kustomize-build-with-helm
+    destination:
+      server: https://192.168.116.131:6443
+      namespace: sre-mtr #argocd-init
+    syncPolicy:
+      automated:
+        prune: false
+        selfHeal: false
+#      hooks:
+#        - type: PostSync
+#          command: ["helm"]
+#          args: ["dependency", "update"]
+      syncOptions:
+      - CreateNamespace=true
+      - ServerSideApply=true
+      #- Replace=true
+    revisionHistoryLimit: null
+    ignoreDifferences:
+    - group: apps
+      kind: Deployment
+      jsonPointers:
+      - /spec/replicas
+
+  - name: argocd-apps-kube-state-metrics-test01
+    namespace: argocd-init
+    additionalLabels: {}
+    additionalAnnotations: {}
+    finalizers: []
+    #- resources-finalizer.argocd.argoproj.io
+    project: test01
+    source:
+      #repoURL: https://github.com/YunchaeJung/k8scluster.git
+     # repoURL: https://github.com/YunchaeJung/k8scluster
+     # targetRevision: master
+     # path: baremetal/clusters/test01/argocd-apps
+     # directory:
+     #   recurse: true
+     # plugin:
+     #   name: kustomize-build-with-helm
+    # ArgoCD v2.6 or later
+    sources:
+     - repoURL: https://github.com/YunchaeJung/k8scluster.git
+       path: baremetal/clusters/test01/kube-state-metrics
+       targetRevision: master
+       #plugin:
+       #  name: kustomize-build-with-helm
+    destination:
+      server: https://192.168.116.131:6443
+      namespace: sre-mtr #argocd-init
+    syncPolicy:
+      automated:
+        prune: false
+        selfHeal: false
+#      hooks:
+#        - type: PostSync
+#          command: ["helm"]
+#          args: ["dependency", "update"]
+      syncOptions:
+      - CreateNamespace=true
+      - ServerSideApply=true
+      #- Replace=true
+    revisionHistoryLimit: null
+    ignoreDifferences:
+    - group: apps
+      kind: Deployment
+      jsonPointers:
+      - /spec/replicas
+      
+      
 # -- Deploy Argo CD Projects within this helm release
 # @default -- `[]` (See [values.yaml])
 ## Ref: https://github.com/argoproj/argo-cd/blob/master/docs/operator-manual/
