--- a/baremetal/clusters/test01/argocd-apps/values-1.6.2.yaml
+++ b/baremetal/clusters/test01/argocd-apps/values-1.6.2.yaml
@@ -66,7 +66,7 @@ applications: #[]
        #  name: kustomize-build-with-helm
     destination:
       server: https://192.168.116.131:6443
-      namespace: sre-mtr #argocd-init
+      namespace: argocd-init
     syncPolicy:
       automated:
         prune: false
@@ -112,7 +112,7 @@ applications: #[]
        #  name: kustomize-build-with-helm
     destination:
       server: https://192.168.116.131:6443
-      namespace: sre-mtr #argocd-init
+      namespace: argocd-init
     syncPolicy:
       automated:
         prune: false
@@ -157,7 +157,7 @@ applications: #[]
        #  name: kustomize-build-with-helm
     destination:
       server: https://192.168.116.131:6443
-      namespace: sre-mtr #argocd-init
+      namespace: argocd-init
     syncPolicy:
       automated:
         prune: false
