불필요 옵션 false 처리

--- a/baremetal/clusters/test01/prometheus-node-exporter/values-4.32.0.yaml
+++ b/baremetal/clusters/test01/prometheus-node-exporter/values-4.32.0.yaml
@@ -273,8 +273,9 @@ networkPolicy:
   #   matchLabels:
   #     app.kubernetes.io/name: kube-state-metrics
 
+#modify true -> false
 securityContext:
-  enabled: true
+  enabled: false
   runAsGroup: 65534
   runAsUser: 65534
   fsGroup: 65534
