이름을 node-exporter 로 변경

--- a/baremetal/clusters/test01/prometheus-node-exporter/values-4.32.0.yaml
+++ b/baremetal/clusters/test01/prometheus-node-exporter/values-4.32.0.yaml
@@ -11,8 +11,8 @@ image:
 
 imagePullSecrets: []
 # - name: "image-pull-secret"
-nameOverride: "monitoring"
-fullnameOverride: "monitoring"
+nameOverride: "node-exporter"
+fullnameOverride: "node-exporter"
 
 # Number of old history to retain to allow rollback
 # Default Kubernetes value is set to 10
