--- a/baremetal/clusters/test01/kube-state-metrics/values-5.26.0.yaml
+++ b/baremetal/clusters/test01/kube-state-metrics/values-5.26.0.yaml
@@ -8,6 +8,10 @@ image:
   sha: ""
   pullPolicy: IfNotPresent
 
+
+#add, modify
+nameOverride: "monitoring"
+
 imagePullSecrets: []
 # - name: "image-pull-secret"
 
