kube-state-metrics 이름 변경

--- a/baremetal/clusters/test01/kube-state-metrics/values-5.26.0.yaml
+++ b/baremetal/clusters/test01/kube-state-metrics/values-5.26.0.yaml
@@ -11,6 +11,7 @@ image:
 
 #add, modify
 nameOverride: "monitoring"
+fullnameOverride: "monitoring"
 
 imagePullSecrets: []
 # - name: "image-pull-secret"
