kube-state-metrics 이름 변경2
monitoring-kube-state-metrics

--- a/baremetal/clusters/test01/kube-state-metrics/values-5.26.0.yaml
+++ b/baremetal/clusters/test01/kube-state-metrics/values-5.26.0.yaml
@@ -10,8 +10,8 @@ image:
 
 
 #add, modify
-nameOverride: "monitoring"
-fullnameOverride: "monitoring"
+nameOverride: "monitoring-kube-state-metrics"
+fullnameOverride: "monitoring-kube-state-metrics"
 
 imagePullSecrets: []
 # - name: "image-pull-secret"
