--- a/baremetal/clusters/test01/kube-prometheus-stack/values-65.2.0.yaml
+++ b/baremetal/clusters/test01/kube-prometheus-stack/values-65.2.0.yaml
@@ -3885,12 +3885,12 @@ prometheus:
       relabel_configs:
       - source_labels: [__meta_kubernetes_service_label_app_kubernetes_io_instance,__meta_kubernetes_service_labelpresent_app_kubernetes_io_instance]
         separator: ;
-        regex: (monitoring-state-metrics);true
+        regex: (monitoring-kube-state-metrics);true
         action: keep
         replacement: ${1}
       - source_labels: [__meta_kubernetes_service_label_app_kubernetes_io_name,__meta_kubernetes_service_labelpresent_app_kubernetes_io_name]
         separator: ;
-        regex: (monitoring-state-metrics);true
+        regex: (kube-state-metrics);true
         action: keep
         replacement: ${1}
       - source_labels: [__address__]
