node exporter 를 namespace 에 노출

--- a/baremetal/clusters/test01/prometheus-node-exporter/values-4.32.0.yaml
+++ b/baremetal/clusters/test01/prometheus-node-exporter/values-4.32.0.yaml
@@ -117,7 +117,9 @@ prometheus:
     #modify 
     additionalLabels: #{}
       monitering: "true"
-    namespace: ""
+    #modify 
+    #namespace: ""
+    namespace: "sre-mtr"
 
     jobLabel: ""
 
