--- a/baremetal/clusters/test01/kube-state-metrics/values-5.26.0.yaml
+++ b/baremetal/clusters/test01/kube-state-metrics/values-5.26.0.yaml
@@ -81,8 +81,8 @@ customLabels: {}
 
 ## Override selector labels
 selectorOverride: #{}
-  app.kubernetes.io/name: "monitoring-kube-state-metrics"
-  app.kubernetes.io/instance: "monitoring-kube-state-metrics"
+  app.kubernetes.io/name: monitoring-kube-state-metrics"
+  app.kubernetes.io/instance: monitoring-kube-state-metrics
 ## set to true to add the release label so scraping of the servicemonitor with kube-prometheus-stack works out of the box
 releaseLabel: false
 
