prometheus node exporter 의 label 로 scape 설정

--- a/baremetal/clusters/test01/kube-prometheus-stack/values-65.2.0.yaml
+++ b/baremetal/clusters/test01/kube-prometheus-stack/values-65.2.0.yaml
@@ -3642,7 +3642,11 @@ prometheus:
     ## ServiceMonitors to be selected for target discovery.
     ## If {}, select all ServiceMonitors
     ##
-    serviceMonitorSelector: {}
+    #modify
+    serviceMonitorSelector: #{}
+      matchLabels:
+        monitering: "true"
+    #     prometheus: somelabel
     ## Example which selects ServiceMonitors with label "prometheus" set to "somelabel"
     # serviceMonitorSelector:
     #   matchLabels:
@@ -3650,6 +3654,7 @@ prometheus:
 
     ## Namespaces to be selected for ServiceMonitor discovery.
     ##
+    
     serviceMonitorNamespaceSelector: {}
     ## Example which selects ServiceMonitors in namespaces with label "prometheus" set to "somelabel"
     # serviceMonitorNamespaceSelector:
