--- a/baremetal/clusters/test01/kube-prometheus-stack/values-65.2.0.yaml
+++ b/baremetal/clusters/test01/kube-prometheus-stack/values-65.2.0.yaml
@@ -580,8 +580,9 @@ alertmanager:
     interval: ""
 
     ## Additional labels
-    ##
-    additionalLabels: {}
+    ## modify
+    additionalLabels: #{}
+      monitering: "true"
 
     ## SampleLimit defines per-scrape limit on number of scraped samples that will be accepted.
     ##
@@ -1254,8 +1255,9 @@ kubeApiServer:
     #   replacement: kubernetes.default.svc:443
 
     ## Additional labels
-    ##
-    additionalLabels: {}
+    ##modify
+    additionalLabels: #{}
+      monitering: "true"
     #  foo: bar
 
 ## Component scraping the kubelet and kubelet-hosted cAdvisor
@@ -1460,8 +1462,9 @@ kubelet:
     #   action: replace
 
     ## Additional labels
-    ##
-    additionalLabels: {}
+    ##modify
+    additionalLabels: #{}
+      monitering: "true"
     #  foo: bar
 
 ## Component scraping the kube controller manager
@@ -1563,8 +1566,9 @@ kubeControllerManager:
     #   action: replace
 
     ## Additional labels
-    ##
-    additionalLabels: {}
+    ##modify
+    additionalLabels: #{}
+      monitering: "true"
     #  foo: bar
 
 ## Component scraping coreDns. Use either this or kubeDns
@@ -1641,8 +1645,9 @@ coreDns:
     #   action: replace
 
     ## Additional labels
-    ##
-    additionalLabels: {}
+    ##modify
+    additionalLabels: #{}
+      monitering: "true"
     #  foo: bar
 
 ## Component scraping kubeDns. Use either this or coreDns
@@ -1735,8 +1740,9 @@ kubeDns:
     #   action: replace
 
     ## Additional labels
-    ##
-    additionalLabels: {}
+    ##modify
+    additionalLabels: #{}
+      monitering: "true"
     #  foo: bar
 
 ## Component scraping etcd
@@ -1846,8 +1852,9 @@ kubeEtcd:
     #   action: replace
 
     ## Additional labels
-    ##
-    additionalLabels: {}
+    ##modify
+    additionalLabels: #{}
+      monitering: "true"
     #  foo: bar
 
 ## Component scraping kube scheduler
@@ -1948,8 +1955,9 @@ kubeScheduler:
     #   action: replace
 
     ## Additional labels
-    ##
-    additionalLabels: {}
+    ##modify
+    additionalLabels: #{}
+      monitering: "true"
     #  foo: bar
 
 ## Component scraping kube proxy
@@ -2036,8 +2044,9 @@ kubeProxy:
     #   sourceLabels: [__name__]
 
     ## Additional labels
-    ##
-    additionalLabels: {}
+    ##modify
+    additionalLabels: #{}
+      monitering: "true"
     #  foo: bar
 
 ## Component scraping kube state metrics
@@ -2715,8 +2724,9 @@ prometheusOperator:
     selfMonitor: true
 
     ## Labels for ServiceMonitor
-    additionalLabels: {}
-
+    #modify
+    additionalLabels: #{}
+      monitering: "true"
     ## Scrape interval. If not set, the Prometheus default scrape interval is used.
     ##
     interval: ""
@@ -3049,9 +3059,9 @@ prometheus:
     interval: ""
 
     ## Additional labels
-    ##
-    additionalLabels: {}
-
+    ##modify
+    additionalLabels: #{}
+      monitering: "true"
     ## scheme: HTTP scheme to use for scraping. Can be used with `tlsConfig` for example if using istio mTLS.
     scheme: ""
 
@@ -3367,9 +3377,9 @@ prometheus:
     interval: ""
 
     ## Additional labels
-    ##
-    additionalLabels: {}
-
+    ##modify
+    additionalLabels: #{}
+      monitering: "true"
     ## SampleLimit defines per-scrape limit on number of scraped samples that will be accepted.
     ##
     sampleLimit: 0
@@ -3644,8 +3654,7 @@ prometheus:
     ##
     #modify
     serviceMonitorSelector: #{}
-      matchLabels:
-        monitering: "true"
+      monitering: "true"
     #     prometheus: somelabel
     ## Example which selects ServiceMonitors with label "prometheus" set to "somelabel"
     # serviceMonitorSelector:
@@ -4484,8 +4493,9 @@ thanosRuler:
     interval: ""
 
     ## Additional labels
-    ##
-    additionalLabels: {}
+    ##modify 
+    additionalLabels: #{}
+      monitering: "true"
 
     ## SampleLimit defines per-scrape limit on number of scraped samples that will be accepted.
     ##
