--- a/baremetal/clusters/test01/kube-prometheus-stack/values-65.2.0.yaml
+++ b/baremetal/clusters/test01/kube-prometheus-stack/values-65.2.0.yaml
@@ -3884,7 +3884,7 @@ prometheus:
       honor_timestamps: true
       scrape_interval: 15s
       scrape_timeout: 10s
-      metrics-path: /metrics
+      metrics_path: /metrics
       scheme: http
       follow_redirects: true
       
