설정 오류 수정

--- a/baremetal/clusters/test01/kube-prometheus-stack/values-65.2.0.yaml
+++ b/baremetal/clusters/test01/kube-prometheus-stack/values-65.2.0.yaml
@@ -3909,11 +3909,11 @@ prometheus:
         replacement: ${1}
       - source_labels: [__address__]
         separator: ;
-        action: hashmod
         regex: (.*)
         modules: 1
-        targetLabel: __tmp_hash
+        target_label: __tmp_hash
         replacement: ${1}
+        action: hashmod
       - source_labels: [__tmp_hash]
         separator: ; 
         regex: "0"
