test01/releasename 수정

--- a/baremetal/clusters/test01/kube-prometheus-stack/kustomization.yaml
+++ b/baremetal/clusters/test01/kube-prometheus-stack/kustomization.yaml
@@ -3,6 +3,7 @@ helmGlobals:
 helmCharts:
   - name: kube-prometheus-stack-65.2.0
     version: 65.2.0
+    releaseName: monitoring    
     namespace: sre-mtr
     valuesFile: values-65.2.0.yaml
     includeCRDs: true
