--- a/baremetal/clusters/test01/kube-state-metrics/kustomization.yaml
+++ b/baremetal/clusters/test01/kube-state-metrics/kustomization.yaml
@@ -3,6 +3,7 @@ helmGlobals:
 helmCharts:
   - name: kube-state-metrics-5.26.0
     version: 5.26.0
+    releaseName: monitering-state-metrics
     namespace: sre-mtr
     valuesFile: values-5.26.0.yaml
     includeCRDs: true  
