--- a/baremetal/clusters/test01/prometheus-node-exporter/values-4.32.0.yaml
+++ b/baremetal/clusters/test01/prometheus-node-exporter/values-4.32.0.yaml
@@ -119,7 +119,7 @@ prometheus:
       monitering: "true"
     #modify 
     #namespace: ""
-    namespace: "sre-mtr"
+    namespace: ""
 
     jobLabel: ""
 
