--- a/base/kube-prometheus-stack/charts/kube-prometheus-stack-65.2.0/templates/exporters/kube-etcd/service.yaml
+++ b/base/kube-prometheus-stack/charts/kube-prometheus-stack-65.2.0/templates/exporters/kube-etcd/service.yaml
@@ -9,11 +9,11 @@ metadata:
 {{ include "kube-prometheus-stack.labels" . | indent 4 }}
   namespace: kube-system
 spec:
-  clusterIP: None
-  {{- if .Values.kubeEtcd.service.ipDualStack.enabled }}
-  ipFamilies: {{ toYaml .Values.kubeEtcd.service.ipDualStack.ipFamilies | nindent 4 }}
-  ipFamilyPolicy: {{ .Values.kubeEtcd.service.ipDualStack.ipFamilyPolicy }}
-  {{- end }}
+#  clusterIP: None
+#  {{- if .Values.kubeEtcd.service.ipDualStack.enabled }}
+#  ipFamilies: {{ toYaml .Values.kubeEtcd.service.ipDualStack.ipFamilies | nindent 4 }}
+#  ipFamilyPolicy: {{ .Values.kubeEtcd.service.ipDualStack.ipFamilyPolicy }}
+#  {{- end }}
   ports:
     - name: {{ .Values.kubeEtcd.serviceMonitor.port }}
       port: {{ .Values.kubeEtcd.service.port }}
